# nix-fast-build

./: .gitignore  .mergify.yml  CLAUDE.md  LICENSE.md  README.md  default.nix  flake.nix  pyproject.toml  renovate.json  treefmt.nix
.github/workflows/: radicle.yaml  tests.yml  update-flake-inputs.yml  update-flake-lock.yml
nix_ci_build/: __init__.py
nix_fast_build/: __init__.py  build.py  ci_renderer.py  log_format.py  options.py  pipe.py  processes.py  renderer.py  report.py  results.py  sources.py  term.py  tty_renderer.py  workers.py
tests/: command.py  conftest.py  getpwnam-preload.c  ports.py  root.py  sshd.py  test_ci_renderer.py  test_cli.py  test_github_integration.py  test_github_summary.py  test_local.py  test_log_format.py  test_retry.py  test_term.py  test_tty_renderer.py
tests/fixtures/: fail.nix  simple.nix
tests/fixtures/internal_json/: lix-fail.jsonl  nix-fail.jsonl  nix-success.jsonl
